--- a/views/product.ejs
+++ b/views/product.ejs
@@ -74,7 +74,7 @@
         el: '#app',
         data: {
             clipped: false,
-            drawer: true,
+            drawer: false,
             fixed: false,
 
 
