--- a/views/gestionProfil.ejs
+++ b/views/gestionProfil.ejs
@@ -10,6 +10,8 @@
           type="text/css">
     <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link type="text/css" rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.8.0/sweetalert2.min.css">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 </head>
 
@@ -38,15 +40,27 @@
                 <v-container fluid>
                     <v-slide-y-transition mode="out-in">
                         <v-layout column align-center>
-                            <template>
-                                <v-card class="grey lighten-4 elevation-1">
+                            <template >
+                                <v-card  class="grey lighten-4 elevation-1">
 
                                     <v-card-text>
                                         <v-container fluid>
                                             <v-layout row>
                                                 <v-flex xs4>
+                                                    <v-subheader>Adresse email</v-subheader>
+                                                </v-flex>
+
+                                                <v-flex xs8>
+                                                    <v-text-field name="input-1" v-model="currentUser.email"
+                                                                  label="Entrez votre adresse email"
+                                                                  id="email"></v-text-field>
+                                                </v-flex>
+                                            </v-layout>
+                                            <v-layout row>
+                                                <v-flex xs4>
                                                     <v-subheader>Nom de l'utilisateur</v-subheader>
                                                 </v-flex>
+
                                                 <v-flex xs8>
                                                     <v-text-field name="input-1" v-model="currentUser.name"
                                                                   label="Entrez votre nom" id="name"></v-text-field>
@@ -85,8 +99,18 @@
                                                 </v-flex>
                                                 <v-flex xs8>
                                                     <v-text-field name="input-1" v-model="currentUser.address"
-                                                                  label="Entrez votre addresse"
+                                                                  label="Entrez votre adresse"
                                                                   id="name"></v-text-field>
+                                                </v-flex>
+                                            </v-layout>
+                                            <v-layout row>
+                                                <v-flex xs4>
+                                                    <v-subheader>Téléphone</v-subheader>
+                                                </v-flex>
+                                                <v-flex xs8>
+                                                    <v-text-field name="input-1" v-model="currentUser.telephone"
+                                                                  label="Entrez votre numéro de téléphone"
+                                                                  id="tel"></v-text-field>
                                                 </v-flex>
                                             </v-layout>
                                             <v-layout row>
@@ -136,6 +160,8 @@
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.4/vue-resource.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.8.0/sweetalert2.min.js"></script>
 <script>
     var isConnected = sessionStorage.getItem("dataKey");
     console.log(isConnected);
@@ -158,9 +184,9 @@
                 baseUrlCurrentUser: "https://transfertprod-668c2.firebaseio.com/user/",
                 items: [
                     {icon: "note_add", title: "Personnaliser un produit", link: "/product"},
-                    {icon: "shopping_cart", title: "Panier", link : "/cart"},
+                    {icon: "shopping_cart", title: "Panier", link: "/cart"},
                     {icon: 'account_circle', title: 'Gestion du profil', link: "/gestionProfil"},
-                    {icon: 'shopping_basket', title: 'Suivi des commandes'}
+                    {icon: 'shopping_basket', title: 'Suivi des commandes', link: '/orders'}
                 ],
                 currentUser: {},
                 y: 'bottom',
@@ -175,12 +201,20 @@
                 right: true,
                 title: 'ImprimShirt'
             },
+            created() {
+                return this.$http.get(this.baseUrlCurrentUser + isConnected + ".json").then((currentUser) => {
+                    this.currentUser = currentUser.data;
+                });
+            },
             methods: {
                 checkForm: function () {
                     this.errorArray = [];
                     let user = this.currentUser;
                     if (user.name === "") {
                         this.errorArray.push("Nom");
+                    }
+                    if (user.email === "") {
+                        this.errorArray.push('Email');
                     }
                     if (user.firstname === "") {
                         this.errorArray.push("Prénom");
@@ -190,6 +224,9 @@
                     }
                     if (user.city === "") {
                         this.errorArray.push("Ville");
+                    }
+                    if (user.phone === "") {
+                        this.errorArray.push('telephone');
                     }
                     if (user.address === "") {
                         this.errorArray.push("Addresse");
@@ -205,22 +242,12 @@
                         return this.showErrorForm = true;
                     }
                     return this.$http.put(this.baseUrlCurrentUser + isConnected + ".json", this.currentUser).then((resp) => {
-                        this.getCurrentUser();
-                        return this.successUpdate = true;
+                        return swal('', 'Votre profil à été mis à jour', 'success');
                     })
 
-                },
-                getCurrentUser: function () {
-                    return this.$http.get(this.baseUrlCurrentUser + isConnected + ".json").then((currentUser) => {
-                        this.currentUser = currentUser.data;
-                    });
                 }
-            }
+            },
         });
-
-
-        vm.getCurrentUser();
-
     }
 </script>
 </body>
