--- a/views/product.ejs
+++ b/views/product.ejs
@@ -17,6 +17,7 @@
 <div id="app">
 
     <v-app v-show="isLoading === false">
+
         <v-navigation-drawer persistent :mini-variant="miniVariant" :clipped="clipped" v-model="drawer">
             <v-list>
                 <v-list-tile v-for="(item, i) in items" :key="i" v-bind:href="item.link" value="true">
@@ -33,6 +34,8 @@
             <v-toolbar-side-icon @click.native.stop="drawer = !drawer"></v-toolbar-side-icon>
 
         </v-toolbar>
+
+
         <main>
             <v-container fluid>
                 <v-container fluid>
@@ -82,7 +85,12 @@
                 { icon: "note_add", title: "Personnaliser un produit", link : "/product" },
                 { icon: "shopping_cart", title: "Panier", link : "/cart" },
                 { icon: 'account_circle', title: 'Gestion du profil', link : "/gestionProfil" },
-                { icon: 'shopping_basket', title: 'Suivi des commandes' }
+                { icon: 'shopping_basket', title: 'Suivi des commandes', link : '/orders' },
+
+            ],
+
+            cart : [
+                { icon: "shopping_cart", title: "Voir mon panier", link : "/cart" },
             ],
 
             y: 'bottom',
