--- a/views/product.ejs
+++ b/views/product.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ImprimShirt</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
+    <link href="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
 
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
