--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -8,7 +8,7 @@
     <title>ImprimShirt</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet"
           type="text/css">
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 </head>
