--- a/views/gestionProfil.ejs
+++ b/views/gestionProfil.ejs
@@ -32,7 +32,9 @@
         </v-navigation-drawer>
         <v-toolbar>
             <v-toolbar-side-icon @click.native.stop="drawer = !drawer"></v-toolbar-side-icon>
-
+            <v-toolbar-title>Gestion du profil</v-toolbar-title>
+            <v-spacer></v-spacer>
+            <v-toolbar-title>Imprim-shirt</v-toolbar-title>
         </v-toolbar>
         <main>
             <v-container fluid style="    position: relative;
@@ -58,7 +60,7 @@
                                             </v-layout>
                                             <v-layout row>
                                                 <v-flex xs4>
-                                                    <v-subheader>Nom de l'utilisateur</v-subheader>
+                                                    <v-subheader>Nom</v-subheader>
                                                 </v-flex>
 
                                                 <v-flex xs8>
@@ -68,7 +70,7 @@
                                             </v-layout>
                                             <v-layout row>
                                                 <v-flex xs4>
-                                                    <v-subheader>Prénom de l'utilisateur</v-subheader>
+                                                    <v-subheader>Prénom</v-subheader>
                                                 </v-flex>
                                                 <v-flex xs8>
                                                     <v-text-field name="input-1" v-model="currentUser.firstname"
@@ -95,7 +97,7 @@
                                             </v-layout>
                                             <v-layout row>
                                                 <v-flex xs4>
-                                                    <v-subheader>Addresse</v-subheader>
+                                                    <v-subheader>Adresse</v-subheader>
                                                 </v-flex>
                                                 <v-flex xs8>
                                                     <v-text-field name="input-1" v-model="currentUser.address"
@@ -158,7 +160,7 @@
 
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.4/vue-resource.min.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.8.0/sweetalert2.min.js"></script>
