--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
   </v-snackbar>
 </div>
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.4"></script>
 <script src="/javascripts/login.js"></script>
 <script src="/javascripts/index.js"></script>
