--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -30,62 +30,144 @@
         </v-navigation-drawer>
         <v-toolbar>
             <v-toolbar-side-icon @click.native.stop="drawer = !drawer"></v-toolbar-side-icon>
+            <v-toolbar-title>Suivi des commandes</v-toolbar-title>
+            <v-spacer></v-spacer>
+            <v-toolbar-title>Imprim-shirt</v-toolbar-title>
 
         </v-toolbar>
-        <main>
-            <v-container fluid style="    position: relative;
+
+        <template>
+            <main>
+                <v-container fluid style="    position: relative;
     top: 2em;">
-                <v-container fluid>
-                    <v-slide-y-transition mode="out-in">
-                        <v-layout column align-center>
-                            <template>
-                                <v-card>
-                                    <v-card-title>
-                                        Mes commandes
-                                        <v-spacer></v-spacer>
-                                        <v-text-field
-                                                append-icon="search"
-                                                label="Rechercher une commande"
-                                                single-line
-                                                hide-details
-                                                v-model="search"
-                                        ></v-text-field>
-                                    </v-card-title>
-                                    <v-data-table
-                                            v-bind:headers="headers"
-                                            v-bind:items="ordersTable"
-                                            v-bind:search="search"
-                                    >
-                                        <template slot="items" scope="props">
-                                            <td>{{ props.item.reference }}</td>
-                                            <td class="text-xs-right">{{ props.item.order_date }}</td>
-                                            <td class="text-xs-right">{{ props.item.totalPrice }}</td>
-                                            <td class="text-xs-right">
-                                                <v-btn primary>Voir</v-btn>
-                                            </td>
-                                            <td class="text-xs-right">{{ props.item.state }}</td>
-                                        </template>
-                                        <template slot="pageText" scope="{ pageStart, pageStop }">
-                                            From {{ pageStart }} to {{ pageStop }}
-                                        </template>
-                                    </v-data-table>
-                                </v-card>
-                            </template>
-                        </v-layout>
-                    </v-slide-y-transition>
+                    <v-container fluid>
+                        <v-slide-y-transition mode="out-in">
+                            <v-layout column align-center>
+                                <template>
+                                    <v-card>
+                                        <v-card-title>
+                                            Mes commandes
+                                            <v-spacer></v-spacer>
+                                            <v-text-field
+                                                    append-icon="search"
+                                                    label="Rechercher une commande"
+                                                    single-line
+                                                    hide-details
+                                                    v-model="search"
+                                            ></v-text-field>
+                                        </v-card-title>
+                                        <v-data-table
+                                                v-bind:headers="headers"
+                                                v-bind:items="ordersTable"
+                                                v-bind:search="search"
+                                        >
+                                            <template slot="items" scope="props">
+                                                <td>{{ props.item.reference }}</td>
+                                                <td class="text-xs-right">{{ props.item.order_date }}</td>
+                                                <td class="text-xs-right">{{ props.item.totalPrice }} €</td>
+                                                <td class="text-xs-right">
+                                                    <v-btn @click.native="getCurrentOrder(props.item)" secondary light><div style="color: white;">VOIR</div></v-btn>
+                                                    <template>
+                                                        <v-layout row justify-center>
+                                                            <v-dialog v-model="dialog" persistent width="50%" scrollable>
+                                                                <v-card>
+                                                                    <v-card-text>
+                                                                        <v-container grid-list-md>
+                                                                            <v-layout wrap>
+
+                                                                                <v-flex xs12>
+                                                                                    <template>
+                                                                                        <v-expansion-panel>
+                                                                                            <v-expansion-panel-content v-for="content in currentOrder.content">
+                                                                                                <div slot="header">{{content.gamme}}</div>
+                                                                                                <v-card style="height : 300px;">
+                                                                                                    <v-card-text class="grey lighten-3">
+                                                                                                        <v-list-tile>
+                                                                                                            <v-list-tile-content>
+                                                                                                                <v-list-tile-title> Sexe : {{content.gender}}</v-list-tile-title>
+
+                                                                                                            </v-list-tile-content>
+                                                                                                        </v-list-tile>
+                                                                                                        <v-list-tile>
+                                                                                                            <v-list-tile-content>
+                                                                                                                <v-list-tile-title> Quantité : {{content.quantity}}</v-list-tile-title>
+
+                                                                                                            </v-list-tile-content>
+                                                                                                        </v-list-tile>
+                                                                                                        <v-list-tile>
+                                                                                                            <v-list-tile-content>
+                                                                                                                <v-list-tile-title> Taille : {{content.size}}</v-list-tile-title>
+
+                                                                                                            </v-list-tile-content>
+                                                                                                        </v-list-tile>
+                                                                                                        <v-list-tile>
+                                                                                                            <v-list-tile-content>
+                                                                                                                <v-list-tile-title> Style : {{content.style}}</v-list-tile-title>
+
+                                                                                                            </v-list-tile-content>
+                                                                                                        </v-list-tile>
+                                                                                                        <v-list-tile>
+                                                                                                            <v-list-tile-content>
+                                                                                                                <v-list-tile-title> Couleur : {{content.color}}</v-list-tile-title>
+
+                                                                                                            </v-list-tile-content>
+                                                                                                        </v-list-tile>
+                                                                                                    </v-card-text>
+                                                                                                </v-card>
+                                                                                                <v-btn light full secondary><div style="color: white;">visuel global</div></v-btn>
+                                                                                                <v-btn light full secondary><div style="color: white;">visuel personnalisé</div></v-btn>
+                                                                                            </v-expansion-panel-content>
+                                                                                        </v-expansion-panel>
+                                                                                    </template>
+                                                                                    <br>
+                                                                                </v-flex>
+                                                                            </v-layout>
+                                                                        </v-container>
+                                                                    </v-card-text>
+                                                                    <v-card-actions>
+                                                                        <v-spacer></v-spacer>
+                                                                        <v-btn class="blue--text darken-1" flat @click.native="dialog = false">Fermer</v-btn>
+                                                                    </v-card-actions>
+                                                                </v-card>
+                                                            </v-dialog>
+                                                        </v-layout>
+                                                    </template>
+                                                </td>
+                                                <td class="text-xs-right">{{ props.item.state }}</td>
+                                            </template>
+                                            <template slot="pageText" scope="{ pageStart, pageStop }">
+                                                From {{ pageStart }} to {{ pageStop }}
+                                            </template>
+                                        </v-data-table>
+                                    </v-card>
+
+                                </template>
+                            </v-layout>
+
+                        </v-slide-y-transition>
+
+                    </v-container>
                 </v-container>
-            </v-container>
-        </main>
-        <v-footer class="pa-3">
-            <v-spacer></v-spacer>
-            <div>© ImprimShirt {{ new Date().getFullYear() }}</div>
-        </v-footer>
+
+            </main>
+            <v-bottom-nav fixed :value="true" :active.sync="e1" class="white">
+
+                <v-btn flat color="teal" value="recent">
+                    <span>Commandes</span>
+                    <v-icon>shopping_cart</v-icon>
+                </v-btn>
+                <v-btn flat color="teal" value="favorites">
+                    <span>Réclamation</span>
+                    <v-icon>record_voice_over</v-icon>
+                </v-btn>
+            </v-bottom-nav>
+        </template>
     </v-app>
 </div>
 
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.4/vue-resource.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
@@ -106,7 +188,7 @@
             el: '#app',
             data: {
                 drawer: true,
-                fixed: true,
+                fixed: false,
                 baseUrlCurrentUser: "https://transfertprod-668c2.firebaseio.com/user/",
                 items: [
                     {icon: "note_add", title: "Personnaliser un produit", link: "/product"},
@@ -125,16 +207,14 @@
                         value: 'orderRef'
                     },
                     {text: 'Date de la commande', value: 'date'},
-                    {text: 'Prix (euros)', value: 'price'},
+                    {text: 'Prix (ttc)', value: 'price'},
                     {text: 'Liste des produits', value: 'product'},
                     {text: 'État de la commande', value: 'state'},
                 ],
+                currentOrder : {},
+                dialog : false,
                 ordersTable: [],
                 currentUser: {},
-                y: 'bottom',
-                x: null,
-                mode: '',
-                right: true,
                 title: 'ImprimShirt'
             },
             methods: {
@@ -156,8 +236,19 @@
                         });
                         order.totalPrice = _.sum(currentPrice);
                     });
-                    console.log(this.ordersTable);
-                }
+                },
+
+                /**
+                 * Retourne la commande selectionné par l'utilisateur.
+                 * @param order
+                 * @returns {boolean}
+                 */
+                getCurrentOrder(order) {
+                    "use strict";
+                    this.currentOrder = order;
+                    this.dialog = true;
+                    console.log(this.currentOrder);
+                },
             }
         });
 
