--- a/views/product.ejs
+++ b/views/product.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ImprimShirt</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet"
+          type="text/css">
     <link href="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
 
@@ -17,22 +18,46 @@
 <div id="app">
 
     <v-app v-show="isLoading === false">
+
         <v-navigation-drawer persistent :mini-variant="miniVariant" :clipped="clipped" v-model="drawer">
             <v-list>
                 <v-list-tile v-for="(item, i) in items" :key="i" v-bind:href="item.link" value="true">
                     <v-list-tile-action>
-                        <v-icon light v-html="item.icon"></v-icon>
+                        <v-icon secondary v-html="item.icon"></v-icon>
                     </v-list-tile-action>
                     <v-list-tile-content>
                         <v-list-tile-title v-text="item.title"></v-list-tile-title>
                     </v-list-tile-content>
                 </v-list-tile>
             </v-list>
+
         </v-navigation-drawer>
         <v-toolbar>
             <v-toolbar-side-icon @click.native.stop="drawer = !drawer"></v-toolbar-side-icon>
+            <v-toolbar-title>Personnaliser un produit</v-toolbar-title>
 
+            <v-spacer></v-spacer>
+            <template>
+                <div class="text-xs-center">
+                    <v-menu open-on-hover bottom offset-y>
+                        <v-btn grey light slot="activator">
+                            <i class="material-icons" style="color: grey; position: relative; top: 1px;">shopping_cart</i> <div style="color: grey;">Mon panier</div>
+                        </v-btn>
+                        <v-list>
+                            <v-list-tile @click="">
+                                <a style="text-decoration: none" href="/cart">
+                                    <v-list-tile-title>
+                                        Voir mon panier
+                                    </v-list-tile-title>
+                                </a>
+                            </v-list-tile>
+                        </v-list>
+                    </v-menu>
+                </div>
+            </template>
         </v-toolbar>
+
+
         <main>
             <v-container fluid>
                 <v-container fluid>
@@ -49,6 +74,7 @@
                     </v-slide-y-transition>
                 </v-container>
             </v-container>
+
         </main>
         <v-footer class="pa-3">
             <v-spacer></v-spacer>
@@ -62,7 +88,7 @@
 
 
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vuetify@0.15.7/dist/vuetify.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.3.4/vue-resource.min.js"></script>
 <script>
 
@@ -74,21 +100,26 @@
         el: '#app',
         data: {
             clipped: false,
-            drawer: true,
+            drawer: false,
             fixed: false,
 
 
             items: [
-                { icon: "note_add", title: "Personnaliser un produit", link : "/product" },
-                { icon: "shopping_cart", title: "Panier", link : "/cart" },
-                { icon: 'account_circle', title: 'Gestion du profil', link : "/gestionProfil" },
-                { icon: 'shopping_basket', title: 'Suivi des commandes' }
+                {icon: "note_add", title: "Personnaliser un produit", link: "/product"},
+                {icon: "shopping_cart", title: "Panier", link: "/cart"},
+                {icon: 'account_circle', title: 'Gestion du profil', link: "/gestionProfil"},
+                {icon: 'shopping_basket', title: 'Suivi des commandes', link: '/orders'},
+
+            ],
+
+            cart: [
+                {icon: "shopping_cart", title: "Voir mon panier", link: "/cart"},
             ],
 
             y: 'bottom',
             x: null,
             mode: '',
-            isLoading : true,
+            isLoading: true,
             timeout: 4000,
             errorArray: [],
             successUpdate: false,
@@ -98,7 +129,7 @@
             right: true,
             title: 'ImprimShirt'
         },
-        methods : {
+        methods: {
             setLoad: setTimeout(function () {
                 vm.isLoading = false;
                 console.log(vm.isLoading);
@@ -107,7 +138,6 @@
     });
 
     vm.setLoad();
-
 
 
 </script>
