--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,7 @@
 }
 
 .application--light {
-  background: url('http://www.digiphotohub.com/wp-content/uploads/2015/09/bigstock-Abstract-Blurred-Background-Of-92820527.jpg');
+  background: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/d-Wgo33/unrecognisable-group-of-people-walking-bright-colours-blurry-anonymous-crowd-bokeh-background-new-york-city-slow-motion_eolxywqqhl_thumbnail-full01.png');
 }
 
 h2 {
@@ -364,7 +364,7 @@ background text
 }
 
 #app {
-  background: url('http://www.digiphotohub.com/wp-content/uploads/2015/09/bigstock-Abstract-Blurred-Background-Of-92820527.jpg');
+  background: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/d-Wgo33/unrecognisable-group-of-people-walking-bright-colours-blurry-anonymous-crowd-bokeh-background-new-york-city-slow-motion_eolxywqqhl_thumbnail-full01.png');
 }/** CSS Styles */
 
 main {
