--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -14,31 +14,8 @@
     <link type="text/css" rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.8.0/sweetalert2.min.css">
 </head>
-
 <body>
-<style>
 
-    .fade-enter-active, .fade-leave-active {
-        transition: opacity .5s
-    }
-    .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-        opacity: 0
-    }
-    .well {
-        min-height: 20px;
-        padding: 19px;
-        margin-bottom: 20px;
-        background-color: white;
-        border: 0;
-        /*border: 1px solid #e3e3e3;$
-        */
-        /* -webkit-border-radius: 4px; */
-        /*-moz-border-radius: 4px;*/
-        border-radius: 0px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    }
-</style>
 <div id="app">
 
     <v-app>
@@ -108,27 +85,11 @@
                                                                     <v-icon>keyboard_arrow_down</v-icon>
                                                                 </v-list-tile-action>
                                                             </v-list-tile>
-
-
-                                                                                <v-card center height="650px">
-                                                                                    <v-card-text>
-                                                                                        <div id="visual">
-                                                                                            <div id="shirtDiv"
-                                                                                                 class="page"
-                                                                                                 style="position: relative; background-color: rgb(255, 255, 255);">
-                                                                                                <img style
-                                                                                                     id="tshirtFacing"
-                                                                                                     v-bind:style="{background : item.color, position : 'absolute'}"
-                                                                                                     v-bind:src="item.visual.shape">
-                                                                                                <div style="width: 200px;height: 400px;">
-                                                                                                    <img style="    position: absolute; left: 165px;
-    top: 7em;
-   " v-bind:src="item.visual.design">
-                                                                                                </div>
-                                                                                            </div>
-                                                                                        </div>
-                                                                                    </v-card-text>
-                                                                                </v-card>
+                                                            <template>
+                                                                <v-carousel :cycle="false" light hide-controls>
+                                                                    <v-carousel-item v-for="visual in item.visual" style="width: 325px" v-bind:style='{"background-color" : item.color}' v-bind:src="visual.img"><img id="canvas" style="border: none;" v-bind:src="visual.computedCanvas" style="width : 135px; height:250px"></v-carousel-item>
+                                                                </v-carousel>
+                                                            </template>
 
 
                                                             <v-list-tile>
@@ -271,6 +232,7 @@
             template: '#page'
         })
 
+
         var vm = new Vue({
             el: '#app',
             data: {
@@ -313,6 +275,8 @@
                     if (localStorage.getItem('cart') !== null) {
                         vm.cart = JSON.parse(localStorage.getItem('cart'));
                         let sumOfProduct = [];
+                        var canvas = document.getElementById('canvas');
+                        console.log(this.cart)
                         vm.cart.forEach((item) => {
                             let price;
                             sumOfProduct.push(parseInt(item.quantity));
@@ -322,7 +286,10 @@
                                 item.price = price;
                             }
                         })
+
                         vm.numberOfItem = _.sum(sumOfProduct);
+
+
 
                     }
                     else {
@@ -369,6 +336,32 @@
                     vm.getCurrentUser();
                     vm.e1 = 2;
 
+                },
+
+                /**
+                 * Ajuste la vue de l'utilisateur sur le visuel suivant
+                 */
+                showOtherSideOfProduct: function () {
+                    vm.selectedItem.visuel[vm.visualIndex].canvas = JSON.stringify(canvas);
+                    canvas.clear();
+                    if (vm.visualIndex > vm.indexOfImg) {
+                        vm.visualIndex = 0;
+                    }
+                    else {
+                        vm.visualIndex = vm.visualIndex + 1;
+                    }
+                    $("#tshirtFacing").attr("src", vm.selectedItem.visuel[vm.visualIndex].img);
+                    console.log(vm.selectedItem);
+                    try {
+                        var json = JSON.parse(vm.selectedItem.visuel[vm.visualIndex].canvas);
+                        canvas.loadFromJSON(vm.selectedItem.visuel[vm.visualIndex].canvas);
+                    }
+                    catch (e) {
+                    }
+                    canvas.renderAll();
+                    setTimeout(function() {
+                        canvas.calcOffset();
+                    },200);
                 },
 
                 /**
