--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -127,27 +127,11 @@
 
 
 
-                                                                                                    <v-card center
-                                                                                                            height="300px">
-                                                                                                        <v-card-text
-                                                                                                                style="background: #eee;height: 300px">
-                                                                                                            <div id="visual">
-                                                                                                                <div id="shirtDiv"
-                                                                                                                     class="page"
-                                                                                                                     style="position: relative; background : #eee">
-                                                                                                                    <img style
-                                                                                                                         id="tshirtFacing"
-                                                                                                                         v-bind:style="{background : content.color, position : 'absolute', height: '300px'}"
-                                                                                                                         v-bind:src="content.visual.shape">
-                                                                                                                    <div style="width: 200px;height: 400px;">
-                                                                                                                        <img style="left: 75px; top: 4em;width: 100px;  position: absolute;
-   " v-bind:src="content.visual.design">
-                                                                                                                    </div>
-                                                                                                                </div>
-                                                                                                            </div>
-                                                                                                        </v-card-text>
-                                                                                                    </v-card>
-
+                                                                                                <template>
+                                                                                                    <v-carousel :cycle="false" light hide-controls>
+                                                                                                        <v-carousel-item v-for="visual in content.visual" style="width: 325px" v-bind:style='{"background-color" : content.color}' v-bind:src="visual.img"><img id="canvas" style="border: none;" v-bind:src="visual.computedCanvas" style="width : 135px; height:250px"></v-carousel-item>
+                                                                                                    </v-carousel>
+                                                                                                </template>
 
 
                                                                                             </v-expansion-panel-content>
