--- a/t-shirt/loadingDirective/css/style.css
+++ b/t-shirt/loadingDirective/css/style.css
@@ -3,9 +3,7 @@
       -ms-flex-align: center;
           align-items: center;
   /* fallback for old browsers */
-    background: #757F9A;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #D7DDE8, #757F9A);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #D7DDE8, #757F9A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/d-Wgo33/unrecognisable-group-of-people-walking-bright-colours-blurry-anonymous-crowd-bokeh-background-new-york-city-slow-motion_eolxywqqhl_thumbnail-full01.png');
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   bottom: 0;
   display: -webkit-box;
