--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -43,7 +43,23 @@
                     <v-container fluid>
                         <v-slide-y-transition mode="out-in">
                             <v-layout column align-center>
-                                <template>
+                                <div v-if="dataLoaded === false">
+                                    <div class="sk-circle">
+                                        <div class="sk-circle1 sk-child"></div>
+                                        <div class="sk-circle2 sk-child"></div>
+                                        <div class="sk-circle3 sk-child"></div>
+                                        <div class="sk-circle4 sk-child"></div>
+                                        <div class="sk-circle5 sk-child"></div>
+                                        <div class="sk-circle6 sk-child"></div>
+                                        <div class="sk-circle7 sk-child"></div>
+                                        <div class="sk-circle8 sk-child"></div>
+                                        <div class="sk-circle9 sk-child"></div>
+                                        <div class="sk-circle10 sk-child"></div>
+                                        <div class="sk-circle11 sk-child"></div>
+                                        <div class="sk-circle12 sk-child"></div>
+                                    </div>
+                                </div>
+                                <template  v-if="dataLoaded">
                                     <v-card>
                                         <v-card-title>
                                             Mes commandes
@@ -231,11 +247,15 @@
                     {text: 'Liste des produits', value: 'product'},
                     {text: 'État de la commande', value: 'state'},
                 ],
+                dataLoaded : false,
                 currentOrder: {},
                 dialog: false,
                 ordersTable: [],
                 currentUser: {},
                 title: 'ImprimShirt'
+            },
+            mounted () {
+                this.getCurrentUser();
             },
             methods: {
                 getCurrentUser: function () {
@@ -243,7 +263,9 @@
                         Object.keys(currentUser.data.orders).forEach((key) => {
                             this.ordersTable.push(currentUser.data.orders[key]);
                         });
-                        return this.getTotalPriceOfOrders();
+
+                        this.getTotalPriceOfOrders();
+                        this.dataLoaded = true;
                     });
                 },
 
@@ -258,7 +280,6 @@
                         let price = parseInt(order.totalPrice);
                         if (Number.isInteger(price)) {
                             order.totalPrice = order.totalPrice + ".00";
-                            console.log(order.totalPrice);
                         }
                     });
                 },
@@ -275,8 +296,6 @@
                 },
             }
         });
-
-        vm.getCurrentUser();
 
     }
 </script>
