--- a/views/gestionProfil.ejs
+++ b/views/gestionProfil.ejs
@@ -42,12 +42,14 @@
                 <v-container fluid>
                     <v-slide-y-transition mode="out-in">
                         <v-layout column align-center>
-                            <template >
+                            <template v-if="dataLoaded">
                                 <v-card  class="grey lighten-4 elevation-1">
 
                                     <v-card-text>
+                                        <div >
                                         <v-container fluid>
                                             <v-layout row>
+
                                                 <v-flex xs4>
                                                     <v-subheader>Adresse email</v-subheader>
                                                 </v-flex>
@@ -138,10 +140,29 @@
                                             <v-btn primary @click.native="updateUserProfil">Enregistrer les
                                                 modifications
                                             </v-btn>
+
                                         </v-container>
+                                        </div>
+
                                     </v-card-text>
                                 </v-card>
                             </template>
+                            <div v-if="dataLoaded === false">
+                                <div class="sk-circle">
+                                    <div class="sk-circle1 sk-child"></div>
+                                    <div class="sk-circle2 sk-child"></div>
+                                    <div class="sk-circle3 sk-child"></div>
+                                    <div class="sk-circle4 sk-child"></div>
+                                    <div class="sk-circle5 sk-child"></div>
+                                    <div class="sk-circle6 sk-child"></div>
+                                    <div class="sk-circle7 sk-child"></div>
+                                    <div class="sk-circle8 sk-child"></div>
+                                    <div class="sk-circle9 sk-child"></div>
+                                    <div class="sk-circle10 sk-child"></div>
+                                    <div class="sk-circle11 sk-child"></div>
+                                    <div class="sk-circle12 sk-child"></div>
+                                </div>
+                            </div>
                         </v-layout>
                     </v-slide-y-transition>
                 </v-container>
@@ -208,14 +229,16 @@
                 errorArray: [],
                 successUpdate: false,
                 errorForm: "",
+                dataLoaded : false,
                 showErrorForm: false,
                 miniVariant: false,
                 right: true,
                 title: 'ImprimShirt'
             },
-            created() {
+            mounted() {
                 return this.$http.get(this.baseUrlCurrentUser + isConnected + ".json").then((currentUser) => {
                     this.currentUser = currentUser.data;
+                    this.dataLoaded = true;
                 });
             },
             methods: {
